tests/baselines/reference/typeArgumentsShouldDisallowNonGenericOverloads.errors.txt
==== tests/cases/compiler/typeArgumentsShouldDisallowNonGenericOverloads.ts (2 errors) ====
    function foo(a: string): string;
    function foo<T>(a: T): number;
    function foo(a: any): any {
        return "hi";
    }
    
    var x: number = foo<string>("hi"); // return type should be 'number'
    var y: string = foo("hi"); // return type should be 'string'
    
    var w: string = foo<string>("hi"); // should error
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! typeArgumentsShouldDisallowNonGenericOverloads.ts(10,5): error TS2011: Cannot convert 'number' to 'string'.
    var z: number = foo("hi"); // should error
        ~~~~~~~~~~~~~~~~~~~~~
!!! typeArgumentsShouldDisallowNonGenericOverloads.ts(11,5): error TS2011: Cannot convert 'string' to 'number'.